# T-Book

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  conftest.py  docker-compose.yml  entrypoint.sh  pyproject.toml
apps/bookings/: admin.py  choices.py  exceptions.py  managers.py  querysets.py  validators.py
apps/bookings/migrations/: 0001_initial.py  0002_alter_booking_check_in_alter_booking_check_out.py  0003_alter_booking_status_alter_bookingguest_type.py
apps/bookings/mixins/: __init__.py  get_booking.py
apps/bookings/models/: __init__.py  booking.py  booking_guest.py
apps/bookings/serializers/: __init__.py  base_serializers.py  owner_serializers.py  user_serializers.py
apps/bookings/services/: __init__.py  availability_service.py  booking_service.py
apps/common/: exceptions.py  managers.py  pagination.py  querysets.py
apps/listings/: apps.py  dto.py  filters.py  search.py  selectors.py  serializers.py  urls.py  views.py
apps/media/: admin.py  urls.py  validators.py
apps/property/: admin.py  apps.py  exceptions.py  filters.py  urls.py
apps/reviews/: admin.py  exceptions.py  models.py  serializers.py  services.py  urls.py  validators.py  views.py
apps/users/: admin.py  forms.py  managers.py  models.py  querysets.py  serializers.py  urls.py  views.py
config/: settings.py  urls.py
nginx/: nginx.conf
tbook-frontend/: .env.example  Dockerfile  docker-entrypoint.sh  index.html  package-lock.json  package.json  vite.config.js
tbook-frontend/src/: App.jsx  AuthContext.jsx  constants.js  index.css  main.jsx
(+126 files in other folders)
