[project]
name = "django-tmp-booking"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django>=6.0.6",
    "django-cors-headers>=4.9.0",
    "django-debug-toolbar>=7.0.0",
    "django-environ>=0.14.0",
    "django-filter>=26.1",
    "djangorestframework>=3.17.1",
    "djangorestframework-simplejwt>=5.5.1",
    "drf-spectacular>=0.30.0",
    "factory-boy>=3.3.3",
    "gunicorn>=26.0.0",
    "pillow>=12.2.0",
    "psycopg[binary]>=3.3.4",
    "pytest>=9.1.1",
    "pytest-django>=4.12.0",
]
